--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/rear-view-programmer-working-all-night-long.jpg") top center;
+  background: url("../img/rear-view-programmer-working-all-night-long.webp") top center;
   background-size: cover;
   filter: grayscale(80%);
 }
