--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,16 +11,16 @@
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #272829;
+  color: #333;
 }
 
 a {
-  color: #149ddd;
+  color: #0056b3;
   text-decoration: none;
 }
 
 a:hover {
-  color: #37b3ed;
+  color: #004080;
   text-decoration: none;
 }
 
@@ -43,7 +43,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #149ddd;
+  background: #0056b3;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -57,7 +57,7 @@ h6 {
 }
 
 .back-to-top:hover {
-  background: #2eafec;
+  background: #004080;
   color: #fff;
 }
 
@@ -79,7 +79,7 @@ h6 {
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #040b14;
+  background: #1a1a1a;
   overflow-y: auto;
 }
 
@@ -87,7 +87,7 @@ h6 {
   margin: 15px auto;
   display: block;
   width: 120px;
-  border: 8px solid #2c2f3f;
+  border: 8px solid #333;
 }
 
 #header .profile h1 {
@@ -109,7 +109,7 @@ h6 {
 #header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #212431;
+  background: #333;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -122,7 +122,7 @@ h6 {
 }
 
 #header .profile .social-links a:hover {
-  background: #149ddd;
+  background: #0056b3;
   color: #fff;
   text-decoration: none;
 }
@@ -176,7 +176,7 @@ h6 {
 .nav-menu a:focus {
   display: flex;
   align-items: center;
-  color: #a8a9b4;
+  color: #ccc;
   padding: 12px 15px;
   margin-bottom: 8px;
   transition: 0.3s;
@@ -187,7 +187,7 @@ h6 {
 .nav-menu a:focus i {
   font-size: 24px;
   padding-right: 8px;
-  color: #6f7180;
+  color: #777;
 }
 
 .nav-menu a:hover,
@@ -202,7 +202,7 @@ h6 {
 .nav-menu .active i,
 .nav-menu .active:focus i,
 .nav-menu li:hover>a i {
-  color: #149ddd;
+  color: #0056b3;
 }
 
 /* Mobile Navigation */
@@ -215,7 +215,7 @@ h6 {
   font-size: 24px;
   transition: all 0.4s;
   outline: none !important;
-  background-color: #40464b;
+  background-color: #333;
   color: #fff;
   width: 40px;
   height: 40px;
@@ -241,8 +241,10 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/rear-view-programmer-working-all-night-long.webp") top center;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/rear-view-programmer-working-all-night-long.webp") top center;
   background-size: cover;
+  background-color: #000; /* Fallback color */
+  -webkit-filter: grayscale(80%);
   filter: grayscale(80%);
 }
 
@@ -282,7 +284,7 @@ h6 {
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
-  border-bottom: 3px solid #149ddd;
+  border-bottom: 3px solid #0056b3;
 }
 
 @media (min-width: 1024px) {
@@ -335,7 +337,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #149ddd;
+  background: #0056b3;
   bottom: 0;
   left: 0;
 }
@@ -371,7 +373,7 @@ section {
 .about .content ul i {
   font-size: 16px;
   margin-right: 5px;
-  color: #149ddd;
+  color: #0056b3;
   line-height: 0;
 }
 
@@ -394,7 +396,7 @@ section {
 .facts .count-box i {
   display: block;
   font-size: 44px;
-  color: #149ddd;
+  color: #0056b3;
   float: left;
   line-height: 0;
 }
@@ -464,7 +466,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #149ddd;
+  background-color: #0056b3;
 }
 
 /*--------------------------------------------------------------
@@ -553,14 +555,14 @@ section {
   font-weight: 600;
   line-height: 1;
   text-transform: uppercase;
-  color: #272829;
+  color: #333;
   margin-bottom: 5px;
   transition: all 0.3s ease-in-out;
 }
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #149ddd;
+  color: #0056b3;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -613,7 +615,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a+a {
-  border-left: 1px solid #37b3ed;
+  border-left: 1px solid #004080;
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -650,11 +652,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #149ddd;
+  border: 1px solid #0056b3;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #149ddd;
+  background-color: #0056b3;
 }
 
 .portfolio-details .portfolio-info {
@@ -708,10 +710,10 @@ section {
   justify-content: center;
   width: 54px;
   height: 54px;
-  background: #149ddd;
+  background: #0056b3;
   border-radius: 50%;
   transition: 0.5s;
-  border: 1px solid #149ddd;
+  border: 1px solid #0056b3;
 }
 
 .services .icon i {
@@ -725,7 +727,7 @@ section {
 }
 
 .services .icon-box:hover .icon i {
-  color: #149ddd;
+  color: #0056b3;
 }
 
 .services .title {
@@ -740,7 +742,7 @@ section {
 }
 
 .services .title a:hover {
-  color: #149ddd;
+  color: #0056b3;
 }
 
 .services .description {
@@ -834,11 +836,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #149ddd;
+  border: 1px solid #0056b3;
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #149ddd;
+  background-color: #0056b3;
 }
 
 /*--------------------------------------------------------------
@@ -857,7 +859,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #149ddd;
+  color: #0056b3;
   float: left;
   width: 44px;
   height: 44px;
@@ -908,14 +910,14 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #149ddd;
+  background: #0056b3;
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #149ddd;
+  background: #0056b3;
   color: #fff;
 }
 
@@ -1003,7 +1005,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #149ddd;
+  background: #0056b3;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1012,7 +1014,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #37b3ed;
+  background: #004080;
 }
 
 @keyframes animate-loading {
