--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1086,7 +1086,7 @@ section {
   bottom: 0;
   width: 300px;
   z-index: 9999;
-  background: #040b14;
+  background: #1a1a1a;
 }
 
 #footer .copyright {
